appId: host.exp.Exponent
---
- tapOn: "Stay Here"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    point: "9%,7%"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    point: "281,813"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-30-coach"
