appId: host.exp.Exponent
---
- swipe:
    start: "50%,30%"
    end: "50%,70%"
- swipe:
    start: "50%,30%"
    end: "50%,70%"
- tapOn: ".*Metabolic.*"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-10-metabolic"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-11-metabolic2"
