appId: host.exp.Exponent
---
- tapOn: ".*Track.*"
- waitForAnimationToEnd:
    timeout: 6000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-07-track"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-08-track2"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/jordan-09-track3"
