appId: host.exp.Exponent
---
- tapOn:
    point: "204,813"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "31,73"
- waitForAnimationToEnd:
    timeout: 4000
- swipe:
    start: "50%,70%"
    end: "50%,30%"
- swipe:
    start: "50%,70%"
    end: "50%,30%"
- swipe:
    start: "50%,70%"
    end: "50%,30%"
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/marcus-04-jul10-timeline"
- swipe:
    start: "50%,70%"
    end: "50%,30%"
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/marcus-05-jul10-timeline2"
