appId: host.exp.Exponent
---
- tapOn:
    point: "91%,10%"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/nina-settings-1"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/nina-settings-2"
- scrollUntilVisible:
    element: "Sign Out"
    direction: DOWN
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/nina-settings-3"
- tapOn: "Sign Out"
- waitForAnimationToEnd:
    timeout: 6000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/nina-signedout"
