appId: host.exp.Exponent
---
- scrollUntilVisible:
    element: ".*Lightly active.*"
    direction: DOWN
- tapOn: ".*Lightly active.*"
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/ob-13-activity"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/ob-13b-below"
