appId: host.exp.Exponent
---
- tapOn:
    point: "12%,36%"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/sofia-03-june"
- tapOn:
    point: "127,813"
- waitForAnimationToEnd:
    timeout: 4000
- tapOn: ".*Sweet treats.*"
- waitForAnimationToEnd:
    timeout: 6000
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/sofia-04-desserts"
- scroll
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/sofia-05-desserts2"
